added new changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div>
+        <img src="images/premium_photo-1663100722417-6e36673fe0ed.avif" alt="Njuguna">
+    </div>
     <h1>Welcome to Moringa School</h1>
     <h3>My Hobbies</h3>
     <ul>
@@ -20,8 +23,8 @@
     <ol>
         <li>Cats</li>
         <li>Dogs</li>
-        <li>Fish</li>
-        <li>Chicken</li>
+        <li>Parrot</li>
+        <li>Horse</li>
         <li>Dove</li>
     </ol>
     <p>Hello world!</p>
