added new changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>Dogs</li>
         <li>Parrot</li>
         <li>Horse</li>
-        <li>Dove</li>
+        <li>Doves</li>
     </ol>
     <p>Hello world!</p>
     
